tests/fixtures/guardrails/valid/app/routes/webhooks.app.uninstalled-const.ts
import { enqueueWebhookInboxEvent } from "~/domain/webhooks/enqueue.server";

export const action = async () => enqueueWebhookInboxEvent();
