tests/fixtures/guardrails/invalid/route-imported-webhook-handler-reexport/app/routes/products.ts
import { enqueueWebhookInboxEvent } from "~/domain/webhooks/enqueue.server";

export { enqueueWebhookInboxEvent as loader };
